liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef char CHAR;
typedef unsigned short UINT16;
typedef unsigned long long UINT64;
/**
 * @ingroup los_list
 * Structure of a node in a doubly linked list.
 */
typedef struct LOS_DL_LIST {
  /**
   *< Current node's pointer to the previous node
   */
  struct LOS_DL_LIST *pstPrev;
  /**
   *< Current node's pointer to the next node
   */
  struct LOS_DL_LIST *pstNext;
} LOS_DL_LIST;
/**
 * @ingroup los_event
 * Event control structure
 */
typedef struct tagEvent {
  /**
   *< Event mask in the event control block,
   *indicating the event that has been logically processed.
   */
  UINT32 uwEventID;
  /**
   *< Event control block linked list
   */
  struct LOS_DL_LIST stEventList;
} tagEvent;
/**
 * @ingroup los_tick
 * Define the CPU Tick structure.
 */
typedef struct TagCpuTick {
  UINT32 cntHi;
  UINT32 cntLo;
} TagCpuTick;
/**
 * @ingroup los_tick
 * Define the CPU Tick structure.
 */
typedef struct TagCpuTick CpuTick;
typedef struct SortLinkAttribute {
  struct LOS_DL_LIST sortLink;
} SortLinkAttribute;
typedef unsigned int SortLinkType;
typedef struct SortLinkList {
  struct LOS_DL_LIST sortLinkNode;
  UINT64 responseTime;
} SortLinkList;
/**
 * @ingroup los_task
 * Define the type of the task entry function.
 *
 */
typedef void *(*TSK_ENTRY_FUNC)(UINT32 arg);
/**
 * @ingroup los_task
 * Define the structure of the parameters used for task creation.
 *
 * Information of specified parameters passed in during task creation.
 */
typedef struct tagTskInitParam {
  /**
   *< Task entrance function
   */
  TSK_ENTRY_FUNC pfnTaskEntry;
  /**
   *< Task priority
   */
  UINT16 usTaskPrio;
  /**
   *< Task parameters
   */
  UINT32 uwArg;
  /**
   *< Task stack memory
   */
  UINTPTR stackAddr;
  /**
   *< Task stack size
   */
  UINT32 uwStackSize;
  /**
   *< Task name
   */
  CHAR *pcName;
  /**
   *< Reserved
   */
  UINT32 uwResved;
} tagTskInitParam;
/**
 * @ingroup los_task
 * Define the structure of the parameters used for task creation.
 *
 * Information of specified parameters passed in during task creation.
 */
typedef struct tagTskInitParam TSK_INIT_PARAM_S;
/**
 * @ingroup los_event
 * Event control structure
 */
typedef struct tagEvent EVENT_CB_S;
typedef unsigned int BOOL;
/**
 * @ingroup los_task
 * Task information structure.
 */
typedef struct tagTskInfo {
  /**
   *< Task entrance function
   */
  CHAR acName[32];
  /**
   *< Task ID
   */
  UINT32 uwTaskID;
  /**
   *< Task status
   */
  UINT16 usTaskStatus;
  /**
   *< Task priority
   */
  UINT16 usTaskPrio;
  /**
   *< Semaphore pointer
   */
  void *pTaskSem;
  /**
   *< Mutex pointer
   */
  void *pTaskMux;
  /**
   *< Sem ID
   */
  UINT32 uwSemID;
  /**
   *< Mux ID
   */
  UINT32 uwMuxID;
  /**
   *< Event
   */
  EVENT_CB_S uwEvent;
  /**
   *< Event mask
   */
  UINT32 uwEventMask;
  /**
   *< Task stack size
   */
  UINT32 uwStackSize;
  /**
   *< Task stack top
   */
  UINT32 uwTopOfStack;
  /**
   *< Task stack bottom
   */
  UINT32 uwBottomOfStack;
  /**
   *< Task SP pointer
   */
  UINT32 uwSP;
  /**
   *< Current task stack usage
   */
  UINT32 uwCurrUsed;
  /**
   *< Task stack usage peak
   */
  UINT32 uwPeakUsed;
  /**
   *< Flag that indicates whether a task stack overflow occurs
   */
  BOOL bOvf;
} tagTskInfo;
#define SortLinkType_OS_SORT_LINK_TASK 1
#define SortLinkType_OS_SORT_LINK_SWTMR 2
/**
 * @ingroup los_tick
 * @brief Convert cycles to microseconds.
 *
 * @par Description:
 * This API is used to convert cycles to microseconds.
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param  cpuTick  [IN]  Number of CPU cycles.
 * @param  usHi     [OUT] Upper 32 bits of the number of microseconds.
 * @param  usLo     [OUT] Lower 32 bits of the number of microseconds.
 *
 * @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter.
 * @retval #LOS_OK                   0: Cycles are successfully converted to microseconds.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 OsCpuTick2US(CpuTick *cpuTick, UINT32 *usHi, UINT32 *usLo);
extern struct SortLinkAttribute *OsGetSortLinkAttribute(SortLinkType type_);
extern UINT32 OsSortLinkInit(struct SortLinkAttribute *sortLinkHead);
extern void OsAdd2SortLink(struct SortLinkList *node,
                           UINT64 startTime,
                           UINT32 waitTicks,
                           SortLinkType type_);
extern void OsDeleteSortLink(struct SortLinkList *node);
extern UINT64 OsSortLinkGetTargetExpireTime(UINT64 currTime,
                                            const struct SortLinkList *targetSortList);
extern UINT64 OsSortLinkGetNextExpireTime(const struct SortLinkAttribute *sortLinkHead);
extern void OsSortLinkResponseTimeConvertFreq(UINT32 oldFreq);
/**
 * @ingroup los_tick
 * @brief Convert cycles to microseconds.
 *
 * @par Description:
 * This API is used to convert cycles to microseconds.
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param  cpuTick  [IN]  Number of CPU cycles.
 * @param  usHi     [OUT] Upper 32 bits of the number of microseconds.
 * @param  usLo     [OUT] Lower 32 bits of the number of microseconds.
 *
 * @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter.
 * @retval #LOS_OK                   0: Cycles are successfully converted to microseconds.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 OsCpuTick2US(CpuTick *cpuTick, UINT32 *usHi, UINT32 *usLo);
extern struct SortLinkAttribute *OsGetSortLinkAttribute(SortLinkType type_);
extern UINT32 OsSortLinkInit(struct SortLinkAttribute *sortLinkHead);
extern void OsAdd2SortLink(struct SortLinkList *node,
                           UINT64 startTime,
                           UINT32 waitTicks,
                           SortLinkType type_);
extern void OsDeleteSortLink(struct SortLinkList *node);
extern UINT64 OsSortLinkGetTargetExpireTime(UINT64 currTime,
                                            const struct SortLinkList *targetSortList);
extern UINT64 OsSortLinkGetNextExpireTime(const struct SortLinkAttribute *sortLinkHead);
extern void OsSortLinkResponseTimeConvertFreq(UINT32 oldFreq);