liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Convert cycles to microseconds."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to convert cycles to microseconds."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  cpuTick  [IN]  Number of CPU cycles."]
    #[doc = " @param  usHi     [OUT] Upper 32 bits of the number of microseconds."]
    #[doc = " @param  usLo     [OUT] Lower 32 bits of the number of microseconds."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter."]
    #[doc = " @retval #LOS_OK                   0: Cycles are successfully converted to microseconds."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn OsCpuTick2US(cpuTick: *mut CpuTick, usHi: *mut UINT32, usLo: *mut UINT32) -> UINT32;
}
pub const SortLinkType_OS_SORT_LINK_TASK: SortLinkType = 1;
pub const SortLinkType_OS_SORT_LINK_SWTMR: SortLinkType = 2;
pub type SortLinkType = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SortLinkList {
    pub sortLinkNode: LOS_DL_LIST,
    pub responseTime: UINT64,
}
#[test]
fn bindgen_test_layout_SortLinkList() {
    assert_eq!(
        ::std::mem::size_of::<SortLinkList>(),
        24usize,
        concat!("Size of: ", stringify!(SortLinkList))
    );
    assert_eq!(
        ::std::mem::align_of::<SortLinkList>(),
        8usize,
        concat!("Alignment of ", stringify!(SortLinkList))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<SortLinkList>())).sortLinkNode as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SortLinkList),
            "::",
            stringify!(sortLinkNode)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<SortLinkList>())).responseTime as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(SortLinkList),
            "::",
            stringify!(responseTime)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SortLinkAttribute {
    pub sortLink: LOS_DL_LIST,
}
#[test]
fn bindgen_test_layout_SortLinkAttribute() {
    assert_eq!(
        ::std::mem::size_of::<SortLinkAttribute>(),
        16usize,
        concat!("Size of: ", stringify!(SortLinkAttribute))
    );
    assert_eq!(
        ::std::mem::align_of::<SortLinkAttribute>(),
        8usize,
        concat!("Alignment of ", stringify!(SortLinkAttribute))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<SortLinkAttribute>())).sortLink as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SortLinkAttribute),
            "::",
            stringify!(sortLink)
        )
    );
}
extern "C" {
    pub static mut g_taskSortLink: SortLinkAttribute;
}
extern "C" {
    pub static mut g_swtmrSortLink: SortLinkAttribute;
}
extern "C" {
    pub fn OsGetSortLinkAttribute(type_: SortLinkType) -> *mut SortLinkAttribute;
}
extern "C" {
    pub fn OsSortLinkInit(sortLinkHead: *mut SortLinkAttribute) -> UINT32;
}
extern "C" {
    pub fn OsAdd2SortLink(
        node: *mut SortLinkList,
        startTime: UINT64,
        waitTicks: UINT32,
        type_: SortLinkType,
    );
}
extern "C" {
    pub fn OsDeleteSortLink(node: *mut SortLinkList);
}
extern "C" {
    pub fn OsSortLinkGetTargetExpireTime(
        currTime: UINT64,
        targetSortList: *const SortLinkList,
    ) -> UINT64;
}
extern "C" {
    pub fn OsSortLinkGetNextExpireTime(sortLinkHead: *const SortLinkAttribute) -> UINT64;
}
extern "C" {
    pub fn OsSortLinkResponseTimeConvertFreq(oldFreq: UINT32);
}
#[doc = " @ingroup los_task"]
#[doc = " Define the type of the task entry function."]
#[doc = ""]
pub type TSK_ENTRY_FUNC =
    ::std::option::Option<unsafe extern "C" fn(arg: UINT32) -> *mut ::std::os::raw::c_void>;
#[doc = " @ingroup los_task"]
#[doc = " Define the structure of the parameters used for task creation."]
#[doc = ""]
#[doc = " Information of specified parameters passed in during task creation."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagTskInitParam {
    #[doc = "< Task entrance function"]
    pub pfnTaskEntry: TSK_ENTRY_FUNC,
    #[doc = "< Task priority"]
    pub usTaskPrio: UINT16,
    #[doc = "< Task parameters"]
    pub uwArg: UINT32,
    #[doc = "< Task stack memory"]
    pub stackAddr: UINTPTR,
    #[doc = "< Task stack size"]
    pub uwStackSize: UINT32,
    #[doc = "< Task name"]
    pub pcName: *mut CHAR,
    #[doc = "< Reserved"]
    pub uwResved: UINT32,
}
#[test]
fn bindgen_test_layout_tagTskInitParam() {
    assert_eq!(
        ::std::mem::size_of::<tagTskInitParam>(),
        40usize,
        concat!("Size of: ", stringify!(tagTskInitParam))
    );
    assert_eq!(
        ::std::mem::align_of::<tagTskInitParam>(),
        8usize,
        concat!("Alignment of ", stringify!(tagTskInitParam))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).pfnTaskEntry as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(pfnTaskEntry)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).usTaskPrio as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(usTaskPrio)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).uwArg as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(uwArg)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).stackAddr as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(stackAddr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).uwStackSize as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(uwStackSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).pcName as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(pcName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTskInitParam>())).uwResved as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTskInitParam),
            "::",
            stringify!(uwResved)
        )
    );
}
#[doc = " @ingroup los_task"]
#[doc = " Define the structure of the parameters used for task creation."]
#[doc = ""]
#[doc = " Information of specified parameters passed in during task creation."]
pub type TSK_INIT_PARAM_S = tagTskInitParam;
#[doc = " @ingroup los_task"]
#[doc = " Task information structure."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagTskInfo {
    #[doc = "< Task entrance function"]
    pub acName: [CHAR; 32usize],
    #[doc = "< Task ID"]
    pub uwTaskID: UINT32,
    #[doc = "< Task status"]
    pub usTaskStatus: UINT16,
    #[doc = "< Task priority"]
    pub usTaskPrio: UINT16,
    #[doc = "< Semaphore pointer"]
    pub pTaskSem: *mut ::std::os::raw::c_void,
    #[doc = "< Mutex pointer"]
    pub pTaskMux: *mut ::std::os::raw::c_void,
    #[doc = "< Sem ID"]
    pub uwSemID: UINT32,
    #[doc = "< Mux ID"]
    pub uwMuxID: UINT32,
    #[doc = "< Event"]
    pub uwEvent: EVENT_CB_S,
    #[doc = "< Event mask"]
    pub uwEventMask: UINT32,
    #[doc = "< Task stack size"]
    pub uwStackSize: UINT32,
    #[doc = "< Task stack top"]
    pub uwTopOfStack: UINT32,
    #[doc = "< Task stack bottom"]
    pub uwBottomOfStack: UINT32,
    #[doc = "< Task SP pointer"]
    pub uwSP: UINT32,
    #[doc = "< Current task stack usage"]
    pub uwCurrUsed: UINT32,
    #[doc = "< Task stack usage peak"]
    pub uwPeakUsed: UINT32,
    #[doc = "< Flag that indicates whether a task stack overflow occurs"]
    pub bOvf: BOOL,
}
